export const snapshot = {};

snapshot[`build a site with jsx/tsx modules 1`] = `
{
  formats: [
    {
      engines: 0,
      ext: ".page.toml",
      isPage: true,
      loader: [AsyncFunction: toml],
    },
    {
      engines: 1,
      ext: ".page.ts",
      isPage: true,
      loader: [AsyncFunction: module],
    },
    {
      engines: 1,
      ext: ".page.js",
      isPage: true,
      loader: [AsyncFunction: module],
    },
    {
      engines: 0,
      ext: ".page.jsonc",
      isPage: true,
      loader: [AsyncFunction: json],
    },
    {
      engines: 0,
      ext: ".page.json",
      isPage: true,
      loader: [AsyncFunction: json],
    },
    {
      dataLoader: [AsyncFunction: json],
      engines: 0,
      ext: ".json",
      loader: [AsyncFunction: json],
    },
    {
      dataLoader: [AsyncFunction: json],
      engines: 0,
      ext: ".jsonc",
      loader: [AsyncFunction: json],
    },
    {
      engines: 1,
      ext: ".md",
      isPage: true,
      loader: [AsyncFunction: text],
    },
    {
      engines: 1,
      ext: ".markdown",
      isPage: true,
      loader: [AsyncFunction: text],
    },
    {
      dataLoader: [AsyncFunction: module],
      engines: 1,
      ext: ".js",
      loader: [AsyncFunction: module],
    },
    {
      dataLoader: [AsyncFunction: module],
      engines: 1,
      ext: ".ts",
      loader: [AsyncFunction: module],
    },
    {
      engines: 1,
      ext: ".vento",
      isPage: true,
      loader: [AsyncFunction: text],
    },
    {
      engines: 1,
      ext: ".vto",
      isPage: true,
      loader: [AsyncFunction: text],
    },
    {
      dataLoader: [AsyncFunction: toml],
      engines: 0,
      ext: ".toml",
      loader: [AsyncFunction: toml],
    },
    {
      dataLoader: [AsyncFunction: yaml],
      engines: 0,
      ext: ".yaml",
      isPage: true,
      loader: [AsyncFunction: yaml],
    },
    {
      dataLoader: [AsyncFunction: yaml],
      engines: 0,
      ext: ".yml",
      isPage: true,
      loader: [AsyncFunction: yaml],
    },
    {
      engines: 1,
      ext: ".jsx",
      isPage: true,
      loader: [AsyncFunction: module],
    },
    {
      engines: 1,
      ext: ".tsx",
      isPage: true,
      loader: [AsyncFunction: module],
    },
  ],
  src: [
    "/",
    "/_components",
    "/_components/button.jsx",
    "/_includes",
    "/_includes/hello.jsx",
    "/_includes/layout.jsx",
    "/index.jsx",
    "/multiple.jsx",
    "/with-function.jsx",
    "/with-markdown.md",
  ],
}
`;

snapshot[`build a site with jsx/tsx modules 2`] = `[]`;

snapshot[`build a site with jsx/tsx modules 3`] = `
[
  {
    content: "<html><head><title>This is the title</title></head><body><main><h1>Hello world</h1><p>This is a JSX page</p></main></body></html>",
    data: {
      basename: "",
      children: "<h1>Hello world</h1><p>This is a JSX page</p>",
      comp: [
        "_components",
        "_proxies",
      ],
      content: [
        "type",
        "props",
      ],
      date: [],
      layout: "layout.jsx",
      mergedKeys: [
        "tags",
      ],
      page: [
        "src",
        "data",
      ],
      paginate: "paginate",
      search: [],
      tags: "Array(0)",
      title: "This is the title",
      url: "/",
    },
    src: {
      ext: ".jsx",
      path: "/index",
      remote: undefined,
    },
  },
  {
    content: "<html><head><title></title></head><body><main><div>1</div></main></body></html>",
    data: {
      basename: "1",
      children: "<div>1</div>",
      comp: [
        "_components",
        "_proxies",
      ],
      content: [
        "type",
        "props",
      ],
      date: [],
      layout: "layout.jsx",
      mergedKeys: [
        "tags",
      ],
      page: [
        "src",
        "data",
      ],
      paginate: "paginate",
      search: [],
      tags: "Array(0)",
      url: "/page/1/",
    },
    src: {
      ext: ".jsx",
      path: "/multiple[0]",
      remote: undefined,
    },
  },
  {
    content: "<html><head><title></title></head><body><main><div>2</div></main></body></html>",
    data: {
      basename: "2",
      children: "<div>2</div>",
      comp: [
        "_components",
        "_proxies",
      ],
      content: [
        "type",
        "props",
      ],
      date: [],
      layout: "layout.jsx",
      mergedKeys: [
        "tags",
      ],
      page: [
        "src",
        "data",
      ],
      paginate: "paginate",
      search: [],
      tags: "Array(0)",
      url: "/page/2/",
    },
    src: {
      ext: ".jsx",
      path: "/multiple[1]",
      remote: undefined,
    },
  },
  {
    content: '<html><head><title>This is the title</title></head><body><main><h1>This is the title</h1><p>This is a JSX page <a href="/blog/">Go to home</a></p></main></body></html>',
    data: {
      basename: "with-function",
      children: '<h1>This is the title</h1><p>This is a JSX page <a href="/blog/">Go to home</a></p>',
      comp: [
        "_components",
        "_proxies",
      ],
      content: "default",
      date: [],
      layout: "layout.jsx",
      mergedKeys: [
        "tags",
      ],
      page: [
        "src",
        "data",
      ],
      paginate: "paginate",
      search: [],
      tags: "Array(0)",
      title: "This is the title",
      url: "/with-function/",
    },
    src: {
      ext: ".jsx",
      path: "/with-function",
      remote: undefined,
    },
  },
  {
    content: '<html><head><title>Markdown combined with JSX</title></head><body><main><h1 class="foo">Hello world</h1>
<p>This is a <strong>markdown</strong> text. <a href="/">Go home</a></p>
</main></body></html>',
    data: {
      basename: "with-markdown",
      children: '<h1 class="foo">Hello world</h1>
<p>This is a <strong>markdown</strong> text. <a href="/">Go home</a></p>
',
      comp: [
        "_components",
        "_proxies",
      ],
      content: "# Hello world{.foo}

This is a **markdown** text. [Go home](/)
",
      date: [],
      layout: "layout.jsx",
      mergedKeys: [
        "tags",
      ],
      page: [
        "src",
        "data",
      ],
      paginate: "paginate",
      search: [],
      tags: "Array(0)",
      title: "Markdown combined with JSX",
      url: "/with-markdown/",
    },
    src: {
      ext: ".md",
      path: "/with-markdown",
      remote: undefined,
    },
  },
]
`;

snapshot[`Previous preact test with SSX 1`] = `
{
  formats: [
    {
      engines: 0,
      ext: ".page.toml",
      isPage: true,
      loader: [AsyncFunction: toml],
    },
    {
      engines: 1,
      ext: ".page.ts",
      isPage: true,
      loader: [AsyncFunction: module],
    },
    {
      engines: 1,
      ext: ".page.js",
      isPage: true,
      loader: [AsyncFunction: module],
    },
    {
      engines: 0,
      ext: ".page.jsonc",
      isPage: true,
      loader: [AsyncFunction: json],
    },
    {
      engines: 0,
      ext: ".page.json",
      isPage: true,
      loader: [AsyncFunction: json],
    },
    {
      dataLoader: [AsyncFunction: json],
      engines: 0,
      ext: ".json",
      loader: [AsyncFunction: json],
    },
    {
      dataLoader: [AsyncFunction: json],
      engines: 0,
      ext: ".jsonc",
      loader: [AsyncFunction: json],
    },
    {
      engines: 1,
      ext: ".md",
      isPage: true,
      loader: [AsyncFunction: text],
    },
    {
      engines: 1,
      ext: ".markdown",
      isPage: true,
      loader: [AsyncFunction: text],
    },
    {
      dataLoader: [AsyncFunction: module],
      engines: 1,
      ext: ".js",
      loader: [AsyncFunction: module],
    },
    {
      dataLoader: [AsyncFunction: module],
      engines: 1,
      ext: ".ts",
      loader: [AsyncFunction: module],
    },
    {
      engines: 1,
      ext: ".vento",
      isPage: true,
      loader: [AsyncFunction: text],
    },
    {
      engines: 1,
      ext: ".vto",
      isPage: true,
      loader: [AsyncFunction: text],
    },
    {
      dataLoader: [AsyncFunction: toml],
      engines: 0,
      ext: ".toml",
      loader: [AsyncFunction: toml],
    },
    {
      dataLoader: [AsyncFunction: yaml],
      engines: 0,
      ext: ".yaml",
      isPage: true,
      loader: [AsyncFunction: yaml],
    },
    {
      dataLoader: [AsyncFunction: yaml],
      engines: 0,
      ext: ".yml",
      isPage: true,
      loader: [AsyncFunction: yaml],
    },
    {
      engines: 1,
      ext: ".jsx",
      isPage: true,
      loader: [AsyncFunction: module],
    },
    {
      engines: 1,
      ext: ".tsx",
      isPage: true,
      loader: [AsyncFunction: module],
    },
  ],
  src: [
    "/",
    "/_components",
    "/_components/button.jsx",
    "/_includes",
    "/_includes/hello.jsx",
    "/_includes/layout.jsx",
    "/index.jsx",
    "/multiple.jsx",
    "/with-comp.njk",
    "/with-function.jsx",
    "/with-markdown.md",
  ],
}
`;

snapshot[`Previous preact test with SSX 2`] = `[]`;

snapshot[`Previous preact test with SSX 3`] = `
[
  {
    content: "<html><head><title>This is the title</title></head><body><main><h1>Hello world</h1><p>This is a JSX page</p></main></body></html>",
    data: {
      basename: "",
      children: "<h1>Hello world</h1><p>This is a JSX page</p>",
      comp: [
        "_components",
        "_proxies",
      ],
      content: [
        "type",
        "props",
      ],
      date: [],
      layout: "layout.jsx",
      mergedKeys: [
        "tags",
      ],
      page: [
        "src",
        "data",
      ],
      paginate: "paginate",
      search: [],
      tags: "Array(0)",
      title: "This is the title",
      url: "/",
    },
    src: {
      ext: ".jsx",
      path: "/index",
      remote: undefined,
    },
  },
  {
    content: "<html><head><title></title></head><body><main><div>1</div></main></body></html>",
    data: {
      basename: "1",
      children: "<div>1</div>",
      comp: [
        "_components",
        "_proxies",
      ],
      content: [
        "type",
        "props",
      ],
      date: [],
      layout: "layout.jsx",
      mergedKeys: [
        "tags",
      ],
      page: [
        "src",
        "data",
      ],
      paginate: "paginate",
      search: [],
      tags: "Array(0)",
      url: "/page/1/",
    },
    src: {
      ext: ".jsx",
      path: "/multiple[0]",
      remote: undefined,
    },
  },
  {
    content: "<html><head><title></title></head><body><main><div>2</div></main></body></html>",
    data: {
      basename: "2",
      children: "<div>2</div>",
      comp: [
        "_components",
        "_proxies",
      ],
      content: [
        "type",
        "props",
      ],
      date: [],
      layout: "layout.jsx",
      mergedKeys: [
        "tags",
      ],
      page: [
        "src",
        "data",
      ],
      paginate: "paginate",
      search: [],
      tags: "Array(0)",
      url: "/page/2/",
    },
    src: {
      ext: ".jsx",
      path: "/multiple[1]",
      remote: undefined,
    },
  },
  {
    content: \`<html><head><title>This is the title</title></head><body><main><h1>This is the title</h1><p onclick="alert('Hello')">This is a JSX page <a href="/blog/">Go to home</a></p></main></body></html>\`,
    data: {
      basename: "with-function",
      children: \`<h1>This is the title</h1><p onclick="alert('Hello')">This is a JSX page <a href="/blog/">Go to home</a></p>\`,
      comp: [
        "_components",
        "_proxies",
      ],
      content: "default",
      date: [],
      layout: "layout.jsx",
      mergedKeys: [
        "tags",
      ],
      page: [
        "src",
        "data",
      ],
      paginate: "paginate",
      search: [],
      tags: "Array(0)",
      title: "This is the title",
      url: "/with-function/",
    },
    src: {
      ext: ".jsx",
      path: "/with-function",
      remote: undefined,
    },
  },
  {
    content: '<html><head><title>Markdown combined with JSX</title></head><body><main><h1 class="foo">Hello world</h1>
<p>This is a <strong>markdown</strong> text. <a href="/">Go home</a></p>
<pre><code class="language-css">body {
  color: blue;
}
</code></pre>
</main></body></html>',
    data: {
      basename: "with-markdown",
      children: '<h1 class="foo">Hello world</h1>
<p>This is a <strong>markdown</strong> text. <a href="/">Go home</a></p>
<pre><code class="language-css">body {
  color: blue;
}
</code></pre>
',
      comp: [
        "_components",
        "_proxies",
      ],
      content: "# Hello world{.foo}

This is a **markdown** text. [Go home](/)

\`\`\`css
body {
  color: blue;
}
\`\`\`
",
      date: [],
      layout: "layout.jsx",
      mergedKeys: [
        "tags",
      ],
      page: [
        "src",
        "data",
      ],
      paginate: "paginate",
      search: [],
      tags: "Array(0)",
      title: "Markdown combined with JSX",
      url: "/with-markdown/",
    },
    src: {
      ext: ".md",
      path: "/with-markdown",
      remote: undefined,
    },
  },
]
`;
